# doctest-util

./: CMakeLists.txt  lifetime_counter.hpp
cmake/: doctest-util.cmake
code/doctest/util/: atomic_relaxed_counter.hpp  counting_allocator.hpp  lifetime_counter.hpp
scratch/: CMakeLists.txt  scratch.cpp
test/: CMakeLists.txt  t-counting_allocator.cpp  t-lifetime_counter.cpp
